--- a/css/style.css
+++ b/css/style.css
@@ -1407,7 +1407,7 @@ button:focus {
   transition: all 0.5s;
 }
 .ast_packages_box:hover .ast_price {
-  background-color: #dc9eaf;
+  background-color: #87b8e0;
   -webkit-box-shadow: 0px 0px 30px -10px #000000;
   -moz-box-shadow: 0px 0px 30px -10px #000000;
   -o-box-shadow: 0px 0px 30px -10px #000000;
@@ -1423,7 +1423,7 @@ button:focus {
   display: inline-block;
   margin: 0px;
   text-transform: uppercase;
-  color: #dc9eaf;
+  color: #87b8e0;
 }
 .ast_packages_box:hover .ast_price h2 {
   color: #ffffff;
@@ -1437,7 +1437,7 @@ button:focus {
   display: inline-block;
   margin: 0px;
   text-transform: uppercase;
-  color: #dc9eaf;
+  color: #87b8e0;
   font-size: 12px;
 }
 .ast_packages_box:hover .ast_price p {
@@ -1492,7 +1492,7 @@ button:focus {
   letter-spacing: 2px;
 }
 .ast_packages_box.active .ast_price {
-  background-color: #dc9eaf;
+  background-color: #87b8e0;
   -webkit-box-shadow: 0px 0px 30px -10px #000000;
   -moz-box-shadow: 0px 0px 30px -10px #000000;
   -o-box-shadow: 0px 0px 30px -10px #000000;
@@ -2696,7 +2696,7 @@ button:focus {
   bottom: 0%;
   left: 0%;
   width: 70px;
-  background-color: #dc9eaf;
+  background-color: #87b8e0;
   height: 2px;
 }
 .widget.widget_search {
